<resources>
    <string name="app_name">Follow Me!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="todo">TODO</string>
    <string name="save_profil">Save Profil</string>
    <string name="name">Name</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="title_activity_notif">NotifActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_friend_0">Your Friend(0)</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
</resources>
