<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dharmawan.myapplication.Fragment.Profile_Fragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        app:srcCompat="@drawable/icon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Last Status"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_profile_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Display Name"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/et_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_profile_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Re-Password"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/et_profile_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/edit_profil"
                    style="@style/myButton"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_edit_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="Change Status"
                    style="@style/myButtonOk"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_save_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/save_profil"
                    style="@style/myButtonOk"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btn_cancel_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="Cancel"
                    style="@style/myButtonCancel"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
